update meta data description

--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ffffff">
     <meta
-      name="NSFWordle"
-      content="A wordle clone with NSFW, rude and naughty words."
+      name="description"
+      content="A wordle clone with NSFW, indecent, rude and dirty words."
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
