--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     <meta name="msapplication-TileColor" content="#ffc40d">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>NSFWordle</title>
+    <script>(function(n,i,v,r,s,c,x,z){x=window.AwsRumClient={q:[],n:n,i:i,v:v,r:r,c:c};window[n]=function(c,p){x.q.push({c:c,p:p});};z=document.createElement('script');z.async=true;z.src=s;document.head.insertBefore(z,document.getElementsByTagName('script')[0]);})('cwr','bf66b3a3-4167-44a9-89b2-8c90bae5376d','1.0.0','eu-west-1','https://client.rum.us-east-1.amazonaws.com/1.0.2/cwr.js',{sessionSampleRate:1,guestRoleArn:"arn:aws:iam::127018213569:role/RUM-Monitor-eu-west-1-127018213569-2354824673461-Unauth",identityPoolId:"eu-west-1:a9681698-e1f1-45f7-b2c8-aa39c1b69f36",endpoint:"https://dataplane.rum.eu-west-1.amazonaws.com",telemetries:["performance","errors","http"],allowCookies:true,enableXRay:false});</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
